--- a/Net CampMyProject/Views/Shared/_Layout.cshtml
+++ b/Net CampMyProject/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MostPopularFilms" asp-action="Index">Films</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Films" asp-action="Index">Films</a>
                         </li>
                         @if (isAdmin)
                         {
