--- a/Net CampMyProject/Views/Films/Details.cshtml
+++ b/Net CampMyProject/Views/Films/Details.cshtml
@@ -1,159 +1,96 @@
-﻿@using Net_CampMyProject.Data.Models
-@model Net_CampMyProject.Data.Models.MostPopularFilm
+﻿@model Net_CampMyProject.Data.Models.Film
 
 @{
-    ViewData["Title"] = $"{Model.FullTitle} - Details";
-
-    var isAdmin = User.IsInRole(Roles.Admin);
+    ViewData["Title"] = "Details";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Details</h1>
 
 <div>
+    <h4>Film</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rank)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rank)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RankUpDown)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RankUpDown)
-        </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullTitle)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ImgUrl)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullTitle)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ImgUrl)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Year)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Duration)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Year)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Duration)
         </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>*@
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Crew)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Crew)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImDbRating)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImDbRating)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImDbRatingCount)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImDbRatingCount)
-        </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TrailerUrl)
         </dt>
-        
-        @if (!string.IsNullOrEmpty(Model.TrailerUrl))
-        {
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.TrailerUrl)
-            </dd>
-            <dd class="col-sm-10">
-                <iframe src="@Model.TrailerUrl" width="1000" height="480" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" frameborder="no" scrolling="no"></iframe>
-            </dd>
-        }
-        
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.TrailerUrl)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ReleaseDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ReleaseDate)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Budget)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Budget)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Languages)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Languages)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Awards)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Awards)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Screenplay)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Screenplay)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BoxOffice)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BoxOffice)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Nominations)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Nominations)
+        </dd>
     </dl>
 </div>
-
-@if (isAdmin)
-{
-    <div>
-        <a asp-action="Edit" asp-route-id="@Model.ImbId">Edit</a> |
-        <a asp-action="Index">Back to List</a>
-    </div>
-}
-
-<h4>Add Comment Form</h4>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" asp-controller="Comments">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input hidden="hidden" name="@nameof(Comment.FilmId)" value="@Model.ImbId" class="form-control" />
-            
-            <div class="form-group">
-                <label for="@nameof(Comment.Content)" class="control-label"></label>
-                <input name="@nameof(Comment.Content)" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-danger" />
-            </div>
-        </form>
-    </div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    <a asp-action="Index">Back to List</a>
 </div>
-
-<h2>Comments</h2>
-
-<table class="table">
-    <thead>
-        <tr>
-            @if (isAdmin)
-            {
-                <th></th>
-            }
-            <th>
-                DateTime
-            </th>
-            <th>
-                Author
-            </th>
-            <th>
-                Content
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Comments.OrderByDescending(c => c.DateTime).Take(10))
-        {
-            <tr>
-                @if (isAdmin)
-                {
-                    <td>
-                        <a asp-action="Edit" asp-controller="Comments" asp-route-id="@item.Id">E</a> |
-                        <a asp-action="Details" asp-controller="Comments" asp-route-id="@item.Id">D</a> |
-                        <a asp-action="Delete" asp-controller="Comments" asp-route-id="@item.Id">R</a>
-                    </td>
-                }
-                <td>
-                    @Html.DisplayFor(modelItem => item.DateTime)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Author.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Content)
-                </td>
-
-            </tr>
-        }
-    </tbody>
-</table>
