--- a/Net CampMyProject/Views/Comments/Details.cshtml
+++ b/Net CampMyProject/Views/Comments/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Film)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Film.ImbId)
+            @Html.DisplayFor(model => model.Film.Title)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Author)
