--- a/Net CampMyProject/Views/FilmPersons/Delete.cshtml
+++ b/Net CampMyProject/Views/FilmPersons/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Net_CampMyProject.Data.Models.Comment
+﻿@model Net_CampMyProject.Data.Models.FilmPerson
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,33 +8,27 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Comment</h4>
+    <h4>FilmPerson</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateTime)
+            @Html.DisplayNameFor(model => model.Role)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateTime)
+            @Html.DisplayFor(model => model.Role)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Content)
+            @Html.DisplayNameFor(model => model.PersonId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Content)
+            @Html.DisplayFor(model => model.PersonId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Film)
+            @Html.DisplayNameFor(model => model.FilmId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Film.Title)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author.Id)
-        </dd class>
+            @Html.DisplayFor(model => model.FilmId)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
