--- a/Net CampMyProject/Views/Films/Index.cshtml
+++ b/Net CampMyProject/Views/Films/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<Net_CampMyProject.Models.ViewModels.FimViewModel>
+﻿@using Net_CampMyProject.Data.Models;
+@model IEnumerable<Net_CampMyProject.Models.ViewModels.FimViewModel>
 
 @{
-    ViewData["Title"] = "Most Popular Films";
+    ViewData["Title"] = "Films";
 
     var isAdmin = User.IsInRole(Roles.Admin);
 }
@@ -16,22 +17,10 @@
     <thead>
         <tr>
             <th>
-                @Html.ActionLink("Rank", "Index", new { sortBy = "Rank", sortOrder = ViewBag.SortOrder })
+                @Html.ActionLink("Title", "Index", new { sortBy = nameof(Film.Title), sortOrder = ViewBag.SortOrder })
             </th>
             <th>
-                @Html.ActionLink("Title", "Index", new { sortBy = "Title", sortOrder = ViewBag.SortOrder })
-            </th>
-            <th>
-                @Html.ActionLink("FullTitle", "Index", new { sortBy = "FullTitle", sortOrder = ViewBag.SortOrder })
-            </th>
-            <th>
-                @Html.ActionLink("Year", "Index", new { sortBy = "Year", sortOrder = ViewBag.SortOrder })
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Crew)
-            </th>
-            <th>
-                @Html.ActionLink("ImDbRating", "Index", new { sortBy = "ImDbRating", sortOrder = ViewBag.SortOrder })
+                @Html.ActionLink("Released", "Index", new { sortBy = nameof(Film.ReleaseDate), sortOrder = ViewBag.SortOrder })
             </th>
             @if (isAdmin)
             {
@@ -44,29 +33,16 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Rank)
+                    <a asp-action="Details" asp-route-id="@item.Id">@item.Title</a>
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.ImbId">@item.Title</a>
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FullTitle)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Year)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Crew)
-
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ImDbRating)
+                    @Html.DisplayFor(modelItem => item.ReleaseDate)
                 </td>
                 <td>
                     @if (isAdmin)
                     {
-                        <a asp-action="Edit" asp-route-id="@item.ImbId" class="ml-1">E</a>
-                        <a asp-action="Delete" asp-route-id="@item.ImbId" class="ml-1">R</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="ml-1">E</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="ml-1">R</a>
                     }
                 </td>
             </tr>
