--- a/Net CampMyProject/Views/Comments/Create.cshtml
+++ b/Net CampMyProject/Views/Comments/Create.cshtml
@@ -2,8 +2,8 @@
 
 @{
     ViewData["Title"] = "Create";
+    var isAdmin = User.IsInRole(Roles.Admin);
 }
-
 <h1>Create</h1>
 
 <h4>Comment</h4>
@@ -24,11 +24,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="FilmId" class="control-label"></label>
-                <select asp-for="FilmId" class ="form-control" asp-items="ViewBag.FilmId"></select>
+                <select asp-for="FilmId" class="form-control" asp-items="ViewBag.FilmId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="AuthorId" class="control-label"></label>
-                <select asp-for="AuthorId" class ="form-control" asp-items="ViewBag.AuthorId"></select>
+                <select asp-for="AuthorId" class="form-control" asp-items="ViewBag.AuthorId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -44,3 +44,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
