--- a/Net CampMyProject/Views/Films/Details.cshtml
+++ b/Net CampMyProject/Views/Films/Details.cshtml
@@ -1,96 +1,264 @@
-﻿@model Net_CampMyProject.Data.Models.Film
+﻿@using Net_CampMyProject.Data.Models
+@model Net_CampMyProject.Data.Models.Film
 
 @{
     ViewData["Title"] = "Details";
+    var isAdmin = User.IsInRole(Roles.Admin);
+    var allFilmPerson = Model.Persons;
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Film</h4>
+    <h4>@Model.Title</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
+        @if (isAdmin)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Id)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Id)
+            </dd>
+        }
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImgUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImgUrl)
-        </dd>
-        <dt class = "col-sm-2">
+        @if (Model.ImgUrl != null)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ImgUrl)
+            </dt>
+            <dd class="col-sm-10">
+                <img src="@Model.ImgUrl" />
+            </dd>
+        }
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Duration)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Duration)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TrailerUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TrailerUrl)
-        </dd>
-        <dt class = "col-sm-2">
+        @if (Model.TrailerUrl != null)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.TrailerUrl)
+            </dt>
+            <dd class="col-sm-10">
+            <iframe width="560" height="315" src="@Model.TrailerUrl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </dd>
+        }
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReleaseDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Budget)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Budget)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Languages)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Languages)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Awards)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Awards)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Screenplay)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Screenplay)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.BoxOffice)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.BoxOffice)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nominations)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nominations)
         </dd>
+        @if (Model.Persons.Where(c => c.Role == FilmPersonRole.Director).FirstOrDefault() != null)
+        {
+            <dt class="col-sm-2">
+                @nameof(FilmPersonRole.Director)
+            </dt>
+
+            <dd class="col-sm-10">
+                @foreach (var i in Model.Persons.Where(c => c.Role == FilmPersonRole.Director))
+                {
+                    <a asp-action="Details" asp-controller="Persons" asp-route-id="@i.Person.Id">@i.Person.Name</a>
+                }
+            </dd>
+        }
+
+        @if (Model.Persons.Where(c => c.Role == FilmPersonRole.Producer).FirstOrDefault() != null)
+        {
+            <dt class="col-sm-2">
+                @nameof(FilmPersonRole.Producer)
+            </dt>
+            <dd class="col-sm-10">
+                @foreach (var i in Model.Persons.Where(c => c.Role == FilmPersonRole.Producer))
+                {
+                    <a asp-action="Details" asp-controller="Persons" asp-route-id="@i.Person.Id">@i.Person.Name</a>
+                }
+            </dd>
+        }
+
+        @if (Model.Persons.Where(c => c.Role == FilmPersonRole.ExecutiveProducers).FirstOrDefault() != null)
+        {
+            <dt class="col-sm-2">
+                @nameof(FilmPersonRole.ExecutiveProducers)
+            </dt>
+            <dd class="col-sm-10">
+                @foreach (var i in Model.Persons.Where(c => c.Role == FilmPersonRole.ExecutiveProducers))
+                {
+                    <a asp-action="Details" asp-controller="Persons" asp-route-id="@i.Person.Id">@i.Person.Name</a>
+                }
+            </dd>
+        }
+
+        @if (Model.Persons.Where(c => c.Role == FilmPersonRole.Composer).FirstOrDefault() != null)
+        {
+            <dt class="col-sm-2">
+                @nameof(FilmPersonRole.Composer)
+            </dt>
+            <dd class="col-sm-10">
+                @foreach (var i in Model.Persons.Where(c => c.Role == FilmPersonRole.Composer))
+                {
+                    <a asp-action="Details" asp-controller="Persons" asp-route-id="@i.Person.Id">@i.Person.Name</a>
+                }
+            </dd>
+        }
+
+        @if (Model.Persons.Where(c => c.Role == FilmPersonRole.Screenplay).FirstOrDefault() != null)
+        {
+            <dt class="col-sm-2">
+                @nameof(FilmPersonRole.Screenplay)
+            </dt>
+            <dd class="col-sm-10">
+                @foreach (var i in Model.Persons.Where(c => c.Role == FilmPersonRole.Screenplay))
+                {
+                    <a asp-action="Details" asp-controller="Persons" asp-route-id="@i.Person.Id">@i.Person.Name</a>
+                }
+            </dd>
+        }
+
+        @if (Model.Persons.Where(c => c.Role == FilmPersonRole.StoryBy).FirstOrDefault() != null)
+        {
+            <dt class="col-sm-2">
+                @nameof(FilmPersonRole.StoryBy)
+            </dt>
+            <dd class="col-sm-10">
+                @foreach (var i in Model.Persons.Where(c => c.Role == FilmPersonRole.StoryBy))
+                {
+                    <a asp-action="Details" asp-controller="Persons" asp-route-id="@i.Person.Id">@i.Person.Name</a>
+                }
+            </dd>
+        }
+
+        @if (Model.Persons.Where(c => c.Role == FilmPersonRole.Cast).FirstOrDefault() != null)
+        {
+            <dt class="col-sm-2">
+                @nameof(FilmPersonRole.Cast)
+            </dt>
+            <dd class="col-sm-10">
+                @foreach (var i in Model.Persons.Where(c => c.Role == FilmPersonRole.Cast))
+                {
+                    <a asp-action="Details" asp-controller="Persons" asp-route-id="@i.Person.Id">@i.Person.Name</a>
+                }
+            </dd>
+        }
+
     </dl>
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     <a asp-action="Index">Back to List</a>
 </div>
+<h4>Add Comment Form</h4>
+
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create" asp-controller="Comments">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input hidden="hidden" name="@nameof(Comment.FilmId)" value="@Model.Id" class="form-control" />
+
+            <div class="form-group">
+                <label for="@nameof(Comment.Content)" class="control-label"></label>
+                <input name="@nameof(Comment.Content)" class="form-control" />
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-danger" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<h2>Comments</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            @if (isAdmin)
+            {
+                <th></th>
+            }
+            <th>
+                DateTime
+            </th>
+            <th>
+                Author
+            </th>
+            <th>
+                Content
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Comments.OrderByDescending(c => c.DateTime).Take(10))
+        {
+            <tr>
+                @if (isAdmin)
+                {
+                    <td>
+                        <a asp-action="Edit" asp-controller="Comments" asp-route-id="@item.Id">E</a> |
+                        <a asp-action="Details" asp-controller="Comments" asp-route-id="@item.Id">D</a> |
+                        <a asp-action="Delete" asp-controller="Comments" asp-route-id="@item.Id">R</a>
+                    </td>
+                }
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Author.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Content)
+                </td>
+
+            </tr>
+        }
