--- a/Net CampMyProject/Views/Films/Index.cshtml
+++ b/Net CampMyProject/Views/Films/Index.cshtml
@@ -7,11 +7,13 @@
     var isAdmin = User.IsInRole(Roles.Admin);
 }
 
-<h1>@ViewData["Title"]</h1>
+@if (isAdmin)
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>       
+}
 
 <table class="table">
     <thead>
@@ -36,7 +38,7 @@
                     <a asp-action="Details" asp-route-id="@item.Id">@item.Title</a>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ReleaseDate)
+                    @Html.DisplayFor(modelItem => item.ReleaseDate.Year)
                 </td>
                 <td>
                     @if (isAdmin)
