--- a/Net CampMyProject/Views/Persons/Index.cshtml
+++ b/Net CampMyProject/Views/Persons/Index.cshtml
@@ -2,13 +2,19 @@
 
 @{
     ViewData["Title"] = "Index";
+    var isAdmin = User.IsInRole(Roles.Admin);
+
 }
 
 <h1>Index</h1>
+@if (isAdmin)
+{
+    <p>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -25,23 +31,24 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BirthnIformation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SocialNetworksLinks)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BirthnIformation)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SocialNetworksLinks)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
